[package]
name = "meeting-summarizer"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
hound = "3.5.1"                  # WAV reading
whisper-rs = "0.15.1"           # Whisper bindings
tokio = { version = "1.47.1", features = ["full"] }
reqwest = { version = "0.12.23", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
tokio-stream = "0.1"

